--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <htm>
 <head>
-	<title>web page</title>
+	<title> simple calc </title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon"  href="Calculator.ico">
 
